...G...... [ZBX-7412] fixed alias parsing; colon symbols are now supported in alias parameters (Juris)
........S. [ZBX-7204] fixed timestamp order of events generated during network discovery (igors)

--------------------------------------------------------------------------------
Changes for 2.2.4rc1

Bug fixes:
..F....... [ZBX-8030] fixed {HOSTNAME} macro resolving (Eduard)
..F....... [ZBX-7974] fixed host groups selecting using unexisting node in user group rights page (Eduard)
..F....... [ZBX-7943] fixed undefined indexes in http test dashboard widget when no history found (Eduard)
..F....... [ZBX-7809] improved validation on decimal values (Eduard)
..F....... [ZBX-7809] fixed unused graph Y axis min/max fields unseting from db (Eduard)
..F....... [ZBX-7976] fixed template "unlink and clear" leaving items attached to parent template (Ivo)
..F....... [ZBX-7545] fixed item mass update form being rendered with a delay when updating template items (Pavels)
..F....... [ZBX-7864] fixed filter by host group in "Availability reports" page (Oleg)

--------------------------------------------------------------------------------
Changes for 2.2.3

2.2.3rc2 was released as 2.2.3 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.3rc2

Bug fixes:
.......P.. [ZBX-8006] fixed memory leak in proxy when handling ssh, telnet and database monitor items (Juris)
.......P.. [ZBXNEXT-166] fixed proxy not storing items with text value type (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.3rc1

New features:
.......PS. [ZBXNEXT-2137] increased maximum cache size limit to 8gb from 2gb (Juris)
.......PS. [ZBXNEXT-166] implemented variable binding for bulk inserts with Oracle database (wiper)
.......PS. [ZBXNEXT-98] implemented bulk requests for SNMP monitoring (asaveljevs)